--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
         <div id="map"></div>
 
-        <script src="https://maps.googleapis.com/maps/api/js"></script>
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBbOrMfRxcNGZ6afo6xDAl0O_DO-T_mzpw"></script>
         <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
         <script src="js/app.js"></script>
     </body>
