--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1>Seattle Traffic Cameras</h1>
 
         <p>
-            <input type="search" id="search" placeholder="Search for specific street names...">
+            <input type="search" id="filter" placeholder="Search for specific street names...">
         </p>
 
         <div id="map"></div>
